--- a/NSFPostdoc_Outline.Rmd
+++ b/NSFPostdoc_Outline.Rmd
@@ -28,8 +28,8 @@ linkcolor: magenta
 
 \pagebreak
 
-# Project Summary (1pg max)
-## Overview (include sponsoring scientists and institutions):
+# Project Summary
+## Overview:
 Ecosystems are defined by both the organisms inhabiting them, and the interactions among these organisms. Quantifying the influence of these interactions on the evolution of the participants should therefore be a priority in evolutionary biology, but remains difficult [@Drury2017a; @Weber2017]. Instead, common comparative methods account for phylogeny, but ignore how cohabiting lineages influence one another phenotypically and spatially. My research goal is to extend our existing toolkit to include methods which more accurately account for macroecology in macroevolution. This includes incorporating (**1**) inter-lineage interactions, (**2**) intra-lineage variation, and (**3**) historical biogeography, to better explain observed patterns in trait diversity. The proposed research will require expanding my understanding of the intersections of evolutionary and computational biology. I will be guided in my journey by two experts in these fields. My computational and methodological mentor **Dr. Brian O'Meara** (*University of Tennessee, Knoxville*) is a world expert in comparative methods, bringing together mathematical advances with empirical evolutionary studies. My curatorial and biological mentor **Dr. Mike Lee** (*South Australian Museum*) has been actively researching macroevolution and the complex origins of reptiles for over two decades, incorporating the often disparate fields of morphological and molecular evolution. Together, these sponsors (and their institutions) provide the opportunity to expand my theoretical understanding of evolutionary biology, and the computational and methodological abilities to apply it.
 
 ## Intellectual Merit
@@ -41,13 +41,13 @@ I plan to use collections of the *South Australian* and *Western Australian Muse
 
 \pagebreak
 
-# Project Description (6pg max)
+# Project Description
 
 ## Introduction
 Organismal phenotypes are the result of genetic *and* environmental forces, and the interaction between them. When explaining patterns of phenotypic evolution, we can account for some genetic influence by incorporating a phylogeny and drift, recognizing that phenotypes tend to be more similar between closely related species. Descent with modification thus provides us with some expectations as to how phenotypes should evolve. But how do we account for influence of extrinsic biotic factors on observed traits? In response to these questions, and in an attempt to explain the accumulation of organismal diversity, the field of phylogenetic comparative methods was developed. Unfortunately, nearly all commonly used probabilistic models for describing phenotypic evolution are ecologically neutral, meaning they fail to account for species interactions with one another, and their environment. This results in lifeless models that mathematically describe the *pattern* of phenotypic evolution, but lack a biological explanation of the *process*. **My overarching research goal is to extend our existing toolkit to include a more diverse methodoligical framework which accounts for macroecology in macroevolution.** This includes incorporating inter-lineage interactions, intra-lineage variation, and historical biogeography, to better explain observed patterns in trait diversity. To develop these methods, I intend to use Australian reptiles as an empirical example.  
 \    
 
-**But, why Australian reptiles?** As an island continent, Australia is a natural laboratory for studies of evolution. With more than 1,000 species of squamate reptiles (lizards and snakes), extensive museum collections, and curated occurrence records, Australia presents a prime opportunity for investigating macroecological models of phenotypic evolution. Since parting ways with Antarctica, the Australian continent has been isolated for around 35 million years. This means that with exception a single preexisting Gondwanan clade (Pygopodoid geckos), all other Australian reptile groups have arrived from Asia and radiated in situ. This includes iconic radiations of pythons, monitor lizards, elapid snakes, skinks, agamid lizards, and blind snakes...
+**But, why Australian reptiles?** As an island continent, Australia is a natural laboratory for studies of evolution. With more than 1,000 species of squamate reptiles (lizards and snakes), extensive museum collections, and curated occurrence records, Australia presents a prime opportunity for investigating macroecological models of phenotypic evolution. Since parting ways with Antarctica, the Australian continent has been isolated for around 35 million years. This means that with the exception of a single preexisting Gondwanan clade (Pygopodoid geckos), all other Australian reptile groups have arrived from Asia and radiated in situ. This includes iconic radiations of pythons, monitor lizards, elapid snakes, skinks, agamid lizards, and blind snakes. Australian institutions also provide extensive collections (**500,000+**), and carefully curated occurrence records, making it a prime location for investigating macroecological models of phenotypic evolution.
 
 ## Research Plan
 
@@ -65,9 +65,9 @@ The overarching goal of this project is to better account for macroecological pr
 ### Methods
 This research depends directly on the development of novel methods and the collection and curation of a specimen-level eco-morphological database (of Australian reptiles). The ultimate goal is to integrate these to directly address our questions of interlineage interactions using empirical data. 
 
-I will use Australian museum specimens to collect existing and new data on reptiles to develop an ecological database that will be incorporated into the Atlas of Living Australia (ALA). The approaches used to collect and integrate the data will likely provide a benchmark for future ALA projects across other Australian organismal groups. The process of developing the comparative methods will also be of direct interest for those hoping to follow a similar methodology.
+I will use Australian museum specimens to collect existing and new data on reptiles to develop an ecological database that will be incorporated into the Atlas of Living Australia (ALA) [@ALA]. The approaches used to collect and integrate the data will likely provide a benchmark for future ALA projects across other Australian organismal groups. The process of developing the comparative methods will also be of direct interest for those hoping to follow a similar methodology.
 
-I anticipate that the incorporation of multiple factors influencing trait and spatial evolution may require complex, parameter-rich models. Methods for modelling univariate continuous traits have traditionally depended on the ability to directly estimate the likelihood of the data given the model. With increasing complexity, likelihood calculations become difficult or intractable, and so I suggest the development instead, of an Approximate Bayesian Computation (ABC) framework. ABC methods rely on the ability to simulate data under a designated model, then determine the similarity between simulated and observed summary statistics. In this way, ABC is a remarkably flexible and valuable tool for complex model-fitting, and will be a boon to this proposal. 
+I anticipate that the incorporation of multiple factors influencing trait and spatial evolution may require complex, parameter-rich models. Methods for modelling univariate continuous traits have traditionally depended on the ability to directly estimate the likelihood of the data given the model. With increasing complexity, likelihood calculations become difficult or intractable, and so I suggest the development instead, of an **Approximate Bayesian Computation** (ABC) framework. ABC methods rely on the ability to simulate data under a designated model, then determine the similarity between simulated and observed summary statistics. In this way, ABC is a remarkably flexible and valuable tool for complex model-fitting, and will be a boon to this proposal. 
 
 #### Objective 1: Does including interspecific interactions improve our inferences of phenotypic evolution?
 Interspecific interactions act as a strong selective force on organismal phenotypes. Interactions may be competitive (vying for resources), mutualistic (beneficial to both parties), commensal, parasitic, or predatory, and dictate a variety of dynamic responses. This has led to theories of character displacement, competitive exclusion, and phenotypic matching, among others. In a classic anecdote, Darwin and Wallace each considered a Madagascan orchid with a foot long nectary. They then independently determined there must be a moth pollinator with an equally long proboscis to match. The later discovery of just such a moth was ultimately less of a surprise than it was a fulfillment of the expectation that organismal interactions can dictate phenotypic evolution, even to absurd extremes. 
@@ -86,26 +86,20 @@ knitr::include_graphics("/Users/Ian/Google.Drive/PostDoc_Applications/RASE_diagr
 
 
 #### Objective 3: Can we build an extensive ecological dataset of Australian reptiles on a continental scale?
-Existing eco-morphological databases cover much of the Australian vertebrate fauna, including mammals (cite Pantheria) and birds (Garnett et al., 2014; EltonTraits), but reptile taxa remain poorly represented (Meiri, 2018). This is surprising given the number of studies of Australian reptile phylogenetics, ecology, and morphology, and remarkable museum collections. In association with the **Atlas of Living Australia** (ALA), I intend to collate existing, undatabased ecological and morphological information with newly collected data, to span the entirety of Australian reptile taxa (>1000 species). The ALA provides a portal for interacting with museum and citizen-scientist records of Australian organismal diversity, comprising 78,492,847 records of 123,364 species. Native reptiles account for over 1 million of these records, which include important spatial, temporal, and taxonomic information about these taxa. Noticeably absent however, are phenotypic data for any of the 500,000+ reptiles in museum collections. In a departure from existing databasing methods, I hope to integrate morphological and ecological data, along with metadata for all viewed specimens back into the ALA database. My hope is that instead of summarizing this information to species means, I can contribute a database which is more flexible to taxonomic changes and better describes intraspecific variation (Troudet etal.2018). As a current research associate of the Western Australian Museum (130,000+ reptile records) and a proposed associate of the South Australian Museum (55,000+ reptile records), I would have access to sampling for the entirety of the continent, making this type of data collection feasible. A resource of this kind would be a world-first, providing invaluable information to future researchers, and returning inalienable data to museums about their own collections.   
+Existing eco-morphological databases cover much of the Australian vertebrate fauna, including mammals [@Pantheria] and birds [@Garnett2015; @EltonTraits], but reptile taxa remain poorly represented [@Meiri2018]. This is surprising given the number of studies of Australian reptile phylogenetics, ecology, and morphology, and remarkable museum collections. In association with the **Atlas of Living Australia** (ALA) [@ALA], I intend to collate existing, undatabased ecological and morphological information with newly collected data, to span the entirety of Australian reptile taxa (>1000 species). The ALA provides a portal for interacting with museum and citizen-scientist records of Australian organismal diversity, comprising 78,492,847 records of 123,364 species. Native reptiles account for over 1 million of these records, which include important spatial, temporal, and taxonomic information about these taxa. Noticeably absent however, are phenotypic data for any of the 500,000+ reptiles in museum collections. In a departure from existing databasing methods, I hope to integrate morphological and ecological data, along with metadata for all viewed specimens back into the ALA database. My hope is that instead of summarizing this information to species means, I can contribute a database which is more flexible to taxonomic changes and better describes intraspecific variation [@Troudet2018]. As a current research associate of the Western Australian Museum (130,000+ reptile records) and a proposed associate of the South Australian Museum (55,000+ reptile records), I would have access to sampling for the entirety of the continent, making this type of data collection feasible. A resource of this kind would be a world-first, providing invaluable information to future researchers, and returning inalienable data to museums about their own collections.   
 
 #### Objective 4: Is competitive signal identifiable from phenotypic and spatial data of Australian reptiles?
-This question represents the synthesis of the three previous objectives. Broadly, my intention is to develop methods that may be of interest to other researchers studying macroevolution and macroecology. However, it is also important to ask these questions empirically, **by employing existing biological collections**. Australian reptiles are particularly well suited for these objectives because they represent a number of species rich, eco-morphologically diverse, endemic radiations. Building on phylogenomic research from my PhD and others, we now have strong species-level time-calibrated phylogenetic hypotheses for nearly all continental reptile groups (*citations*). This makes macroevolutionary inferences tractable. The Atlas of Living Australia also provides an unparalleled resource for species distributions based on museum occurrence records, for all described taxa. Given existing data and resources, and the access to material, I *honestly* believe that this is one of the best possible systems to focus this research on. 
+This question represents the synthesis of the three previous objectives. Broadly, my intention is to develop methods that may be of interest to other researchers studying macroevolution and macroecology. However, it is also important to ask these questions empirically, **by employing existing biological collections**. Australian reptiles are particularly well suited for these objectives because they represent a number of species rich, eco-morphologically diverse, endemic radiations. Diversification *in-situ* reduces the influence of immigration and emigration, and simplifies our research. Building on phylogenomic research from my PhD and others, we now have strong species-level time-calibrated phylogenetic hypotheses for nearly all continental reptile groups. This makes macroevolutionary inferences tractable. The Atlas of Living Australia also provides an unparalleled resource for species distributions based on museum occurrence records, for all described taxa. Given existing data and resources, and the access to material, I *honestly* believe that this is one of the best possible systems to focus this research on. 
 
 ### Significance and Broader Impacts
-Since Joe Felsenstein [@Felsenstein1985] highlighted the nonindependence of species in comparative methods (owing to their underlying relatedness---phylogeny), Phylogenetic Comparative Methods (PCMs) have become commonplace throughout evolutionary and ecological research. This is likely the result of expanding phylogenetic and computational resources, and user-friendly implementations [@Paradis2004; @Revell2011]. Nonetheless, comparative methods have exploded as a popular area of study and application, particularly in the last ten years. In their most basic form, PCMs can provide information about-- and correct for phylogenetic signal present in data. Their flexible design however, means that they can be easily extended to incorporate diverse data types. Regardless, their  extended 
+Since Joe Felsenstein [@Felsenstein1985] highlighted the nonindependence of species in comparative methods (owing to their underlying relatedness---phylogeny), Phylogenetic Comparative Methods (PCMs) have become commonplace throughout evolutionary and ecological research. This is likely the result of expanding phylogenetic and computational resources, and user-friendly implementations [@Paradis2004; @Revell2011]. Nonetheless, comparative methods have exploded as a popular area of study and application, particularly in the last ten years. In their most basic form, PCMs can provide information about-- and correct for phylogenetic signal present in data. Their flexible design however, means that they can be easily extended to incorporate diverse data types. Regardless, many of the inferences we can make from PCMs are intuitive, which makes them exciting and digestible for popular science media. 
 
-
-
-
-
-Their flexible design however, means that they can be easily co 
-
-Phylogenetic comparative methods are undergoing a period of rapid growth, largely as a result of bigger and more complete phylogenies, and the popularity of computational biology. Macroevolutionary research is also popular in science media because many of its inferences are intuitive and exciting. My proposed research builds on existing ecological theory and macroevolutionary methods, synthesizing the two. I anticipate that the output of this project will be valuable both empirically and methodologically. The construction of an ecomorphological database will provide a resource for a diverse array of biologists working from population to macroevolutionary scales. The comparative ABC method design will also make available a generalizable framework for creating evolutionary models.
+My proposed research builds on existing ecological theory and macroevolutionary methods, synthesizing the two. I anticipate that the output of this project will be valuable both empirically and methodologically. The construction of an ecomorphological database will provide a resource for a diverse array of biologists working from population to macroevolutionary scales. The comparative ABC method design will also make available a generalizable framework for creating evolutionary models. I aim to publish the data, methods, and empirical findings, and look forward to sharing our results with colleagues and the general public. 
 
 ## Training Objectives and Career Development
 Evolutionary biology is increasingly intersecting with computational biology. To expand my versatility in phylogenetic comparative methods, I aim to first extend my abilities in statistical modelling. This means strengthening the connection between theoretical understanding and computational implementation of macroevolutionary processes. I have carefully chosen two sponsors who are experts in these fields, and in bridging the divide between them, bringing together the conceptual and empirical. 
 
-As a self-taught coder, there remain a number of shortcomings in my computational abilities, particularly with regards to efficiency. Dr. O'Meara is an experienced member of the new-wave of code-conscious evolutionary biologists, and is the author of popular comparative methods packages treepl, brownie, and OUwie [needs citations]. I look forward to also developing a better understanding of the underlying mathematics behind current methods. Dr. Lee is a world-expert in Bayesian modelling, and I will receive training from him in directly in Bayesian computation. 
+As a self-taught coder, there remain a number of shortcomings in my computational abilities, particularly with regards to efficiency. Dr. O'Meara is an experienced member of the new-wave of code-conscious evolutionary biologists, and is the author of popular comparative methods packages treePL, brownie, and OUwie [@OUwie2012; @Brownie2009]. I look forward to also developing a better understanding of the underlying mathematics behind current methods. Dr. Lee is a world-expert in Bayesian modelling, and I will receive training from him in directly in Bayesian computation. His experience in functional morphology will also be of benefit to my interest in lineage interactions. 
 
 I have always been interested in a career that merges the creativity of research with the outreach of science communication. I have been and will remain a strong activist for science education and literacy, and am committed to fulfilling this dream. I believe that the training provided by Drs. O'Meara and Lee will help to make me a rising star in the field of evolutionary biology, however this is not my exclusive goal. The South Australian Museum, and proposed workshops, will also provide the opportunity to continue my development as an educator and science communicator. I feel that as a scientist, and a publicly funded researcher, I owe a debt to make my research digestible and accessible to the public. 
 
@@ -113,14 +107,15 @@ I have always been interested in a career that merges the creativity of research
 
 I have chosen Drs. Lee and O'Meara specifically for their skill sets, research interests, and proven track records of pushing the evolutionary biology community forward. They are both creative and judicious thinkers, who I admire for their contributions to science and broader education.  
 
-**Dr. Brian O'Meara** (*Methods/Biology*) is an Associate Professor in the Department of Ecology & Evolutionary Biology at the University of Tennessee, Knoxville. 
+**Dr. Brian O'Meara** (*Methods/Biology*) is an Associate Professor in the Department of Ecology & Evolutionary Biology at the University of Tennessee, Knoxville. His lab group work to build and apply comparative methods in phylogenetics. He is known for his expertise in comparative methods and phylogenetics, and his community-mindedness. Dr. O'Meara is a leader in the new-guard of biology, both a skilled researcher, and conscientious advocate. 
 
-**Dr. Michael Lee** (*Theory/Biology*) is the curator of Palaeontology at the South Australian Museum, and holds a joint appointment in the Department of Biological Sciences at Flinders University of South Australia. 
+**Dr. Michael Lee** (*Theory/Biology*) is the Leader of Research in Palaeontology at the South Australian Museum, and holds a joint appointment in the Department of Biological Sciences at Flinders University of South Australia. Dr. Lee is primarily an evolutionary biologist, who works at the interface of palaeontology, neontology, and computational biology. 
 
-\pagebreak
+I will spend the first year (Y1) of this fellowship at the **South Australian Museum** (SAM) in Adelaide. The SAM is an amazing resource for researchers across the natural sciences. Though I will be primarily mentored by Dr. Lee during this period, I will also be working remotely with Dr. O'Meara, and building relationships with SAM colleagues. I expect that sometime after the first year, I will transition my position from the data collection phase in Australia, to the methods development phase with Dr. O'Meara in the USA. Both institutions are world-recognized, and have state of the art facilities. 
+
 
 ## Timetable
-The current timetable assumes Year 1 will be spent at the South Australian Museum in Adelaide, Australia. Years 2 and 3 will be spent at the University of Tennessee---Knoxville, USA. 
+The requested duration of this fellowship is **3 years**. The current timetable assumes Year 1 and part of Year 2 will be spent at the South Australian Museum in Adelaide, Australia. The remainder of Year 2 and Year 3 will be spent at the University of Tennessee---Knoxville, USA. 
 ```{r echo = FALSE}
 library(knitr); library(pander)
 
@@ -128,7 +123,7 @@ df <- data.frame(Year = c("Y1","Y2", "Y3"),
                  Research = c("Collect morphological data. Build reptile database, and integrate it into ALA[^1]",
                               "Build ABC^1^ framework for PCMs^1^. Implement empirically to reptiles",
                               "Package and release ABC framework for lineage interactions"),
-                 Training = c("a", "b", "c"),
+                 Training = c("Learn databasing methods. Work with the ALA", "Build software development skills", "Extend development skills. Train others on methods"),
                  Dissemination = c("Release extended specimen data format for ALA, and present database",
                                   "Present methods and results at scientific conferences. Publish project   pre-prints",
                                   "Publish methods and empirical findings"))
@@ -158,7 +153,7 @@ I have no other currently submitted, or planned applications for support.
 
 \pagebreak
 
-## Dissertation Research Abstract (1 page)
+## Dissertation Research Abstract
 
 ### Macroevolution in a changing Australia
 
@@ -174,7 +169,7 @@ To test for signal from empirical data, I employed phylogenetic comparative meth
 
 \pagebreak
 
-## Sponsoring Scientists Statement (3 pages max)
+## Sponsoring Scientists Statement
 Drs. Brian O'Meara and Mike Lee are highly supportive of Ian Brennan's postdoctoral fellowship application. The proposed research will provide a logical extension of existing phylogenetic comparative methods, incorporating ecological interactions into models of macroevolution. This project will help Ian build his own independent research program, and learn the skills to become a successful biological software developer. His design for developing resources for integrating existing morphological data into the Atlas of Living Australia is a novel and praiseworthy endeavor. He will be supported along his journey by two world-class institutions.  
 
 ### Current Research and Funding
@@ -267,6 +262,8 @@ The comparative methods developed for this fellowship will be bundled into an R 
 
 ### Roles and Responsibilities
 Ian Brennan will be responsible for the collection, management, and archiving of all data. Dr. O'Meara will provide guidance on database development and management. The Atlas of Living Australia will provide help with data formatting and integration into the ALA system. 
+
+\pagebreak
 
 # 2 Letters of Reference (using Fastlane)
 
