--- a/NSF_References.bib
+++ b/NSF_References.bib
@@ -1,3 +1,110 @@
+@article{Troudet2018,
+   author = {Troudet, J. and Vignes-Lebbe, R. and Grandcolas, P. and Legendre, F.},
+   title = {The Increasing Disconnection of Primary Biodiversity Data from Specimens: How Does It Happen and How to Handle It?},
+   journal = {Syst Biol},
+   volume = {67},
+   number = {6},
+   pages = {1110-1119},
+   ISSN = {1076-836X (Electronic)
+1063-5157 (Linking)},
+   DOI = {10.1093/sysbio/syy044},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/29893962},
+   year = {2018},
+   type = {Journal Article}
+}
+
+
+@misc{ALA,
+   author = {Atlas_of_Living_Australia},
+   year = {Accessed: 1 September, 2018},
+   number = {1 November},
+   doi = {www.ala.org.au},
+   type = {Web Page}
+}
+
+
+@article{Meiri2018,
+   author = {Meiri, Shai},
+   title = {Traits of lizards of the world: Variation around a successful evolutionary design},
+   journal = {Global Ecology and Biogeography},
+   volume = {27},
+   number = {10},
+   pages = {1168-1172},
+   ISSN = {1466822X},
+   DOI = {10.1111/geb.12773},
+   year = {2018},
+   type = {Journal Article}
+}
+
+
+@article{EltonTraits,
+author = {Wilman, Hamish and Belmaker, Jonathan and Simpson, Jennifer and de la Rosa, Carolina and Rivadeneira, Marcelo M. and Jetz, Walter},
+title = {EltonTraits 1.0: Species-level foraging attributes of the world's birds and mammals},
+journal = {Ecology},
+volume = {95},
+number = {7},
+pages = {2027-2027},
+keywords = {bird, body size, diet, eco-informatics, foraging, function, mammal, mass, niche, stratum, traits, vertebrate},
+doi = {10.1890/13-1917.1},
+url = {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/13-1917.1},
+eprint = {https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1890/13-1917.1},
+abstract = {Species are characterized by physiological, behavioral, and ecological attributes that are all subject to varying evolutionary and ecological constraints and jointly determine species' role and function in ecosystems. Attributes such as diet, foraging strata, foraging time, and body size, in particular, characterize a large portion of the “Eltonian” niches of species. Here we present a global species-level compilation of these key attributes for all 9993 and 5400 extant bird and mammal species derived from key literature sources. Global handbooks and monographs allowed the consistent sourcing of attributes for most species. For diet and foraging stratum we followed a defined protocol to translate the verbal descriptions into standardized, semiquantitative information about relative importance of different categories. Together with body size (continuous) and activity time (categorical) this enables a much finer distinction of species' foraging ecology than typical categorical guild assignments allow. Attributes lacking information for specific species are flagged, and interpolated values based on taxonomy are provided instead. The presented data set is limited by, among others, these select cases missing observed data, by errors and uncertainty in the expert assessment as presented in the literature, and by the lack of intraspecific information. However, the standardized and transparent nature and complete global coverage of the data set should support an array of potential studies in biogeography, community ecology, macroevolution, global change biology, and conservation. Potential uses include comparative work involving these traits as focal or secondary variables, ecological research on the trait or trophic structure of communities, or conservation science concerned with the loss of function among species or in ecosystems in a changing world. We hope that this publication will spur the sharing, collaborative curation, and extension of data to the benefit of a more integrative, rigorous, and global biodiversity science.}
+}
+
+@article{Garnett2015,
+   author = {Garnett, Stephen T. and Duursma, Daisy E. and Ehmke, Glenn and Guay, Patrick-Jean and Stewart, Alistair and Szabo, Judit K. and Weston, Michael A. and Bennett, Simon and Crowley, Gabriel M. and Drynan, David and Dutson, Guy and Fitzherbert, Kate and Franklin, Donald C.},
+   title = {Biological, ecological, conservation and legal information for all species and subspecies of Australian bird},
+   journal = {Scientific Data},
+   volume = {2},
+   pages = {150061},
+   DOI = {10.1038/sdata.2015.61},
+   url = {https://doi.org/10.1038/sdata.2015.61},
+   year = {2015},
+   type = {Journal Article}
+}
+
+@article{Pantheria,
+author = {Jones, Kate E. and Bielby, Jon and Cardillo, Marcel and Fritz, Susanne A. and O'Dell, Justin and Orme, C. David L. and Safi, Kamran and Sechrest, Wes and Boakes, Elizabeth H. and Carbone, Chris and Connolly, Christina and Cutts, Michael J. and Foster, Janine K. and Grenyer, Richard and Habib, Michael and Plaster, Christopher A. and Price, Samantha A. and Rigby, Elizabeth A. and Rist, Janna and Teacher, Amber and Bininda-Emonds, Olaf R. P. and Gittleman, John L. and Mace, Georgina M. and Purvis, Andy},
+title = {PanTHERIA: a species-level database of life history, ecology, and geography of extant and recently extinct mammals},
+journal = {Ecology},
+volume = {90},
+year = {2009},
+number = {9},
+pages = {2648-2648},
+keywords = {behavior, biogeography, body size, climatic variables, comparative analyses, conservation, ecology, geographic range, life history, mammals, PanTHERIA, population density},
+doi = {10.1890/08-1494.1},
+url = {https://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/08-1494.1},
+eprint = {https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1890/08-1494.1},
+abstract = {Analyses of life-history, ecological, and geographic trait differences among species, their causes, correlates, and likely consequences are increasingly important for understanding and conserving biodiversity in the face of rapid global change. Assembling multispecies trait data from diverse literature sources into a single comprehensive data set requires detailed consideration of methods to reliably compile data for particular species, and to derive single estimates from multiple sources based on different techniques and definitions. Here we describe PanTHERIA, a species-level data set compiled for analysis of life history, ecology, and geography of all known extant and recently extinct mammals. PanTHERIA is derived from a database capable of holding multiple geo-referenced values for variables within a species containing 100 740 lines of biological data for extant and recently extinct mammalian species, collected over a period of three years by 20 individuals. PanTHERIA also includes spatial databases of mammalian geographic ranges and global climatic and anthropogenic variables. Here we detail how the data fields are extracted and defined for PanTHERIA using a customized data input format (MammalForm); how data were collected from the literature, species names and sources tracked, error-checking and validation procedures applied, and how data were consolidated into species-level values for each variable. Tables of the consolidated species-level values are made available for each of two recent species-level taxonomic classifications of mammals, as well as associated taxonomic synonymy conversion and data-input files. This study provides a useful guide to prospective researchers on how to structure and codify life-history, ecological, geographic, and taxonomic data and methods to extract meaningful species-level traits. It also provides comprehensive information on traits like size, diet, environmental conditions, and ecology to permit macroecological and macroevolutionary analyses of this important clade. The complete data sets corresponding to abstracts published in the Data Papers section of the journal are published electronically in Ecological Archives at 〈http://esapubs.org/archive〉. (The accession number for each Data Paper is given directly beneath the title.)}
+}
+
+@article{Brownie2009,
+author = {O'Meara, Brian C.},
+title = {New Heuristic Methods for Joint Species Delimitation and Species Tree Inference},
+journal = {Systematic Biology},
+volume = {59},
+number = {1},
+pages = {59-73},
+year = {2010},
+doi = {10.1093/sysbio/syp077},
+URL = {http://dx.doi.org/10.1093/sysbio/syp077},
+eprint = {/oup/backfile/content_public/journal/sysbio/59/1/10.1093_sysbio_syp077/5/syp077.pdf}
+}
+
+@article{OUwie2012,
+   author = {Beaulieu, Jeremy M. and Jhwueng, Dwueng-Chwuan and Boettiger, Carl and O’Meara, Brian C.},
+   title = {Modeling stabilizing selection: Expanding the Ornstein-Uhlenbeck model of adaptive evolution},
+   journal = {Evolution},
+   volume = {66},
+   number = {8},
+   pages = {2369-2383},
+   ISSN = {1558-5646},
+   DOI = {10.1111/j.1558-5646.2012.01619.x},
+   url = {http://dx.doi.org/10.1111/j.1558-5646.2012.01619.x},
+   year = {2012},
+   type = {Journal Article}
+}
+
 @article{Lemmon2008,
 author = {Lemmon, Alan R. and Lemmon, Emily Moriarty},
 title = {A Likelihood Framework for Estimating Phylogeographic History on a Continuous Landscape},
